# motor-market-workspace

./: ARCHITECTURE.md  README.md  package-lock.json  package.json  turbo.json
apps/api/: .env  Cargo.toml  package.json
apps/api/migrations/: 20260612182540_create_users_table.sql  20260614002054_create_listings_table.sql  20260615021116_create_listing_images_table.sql
apps/api/src/: main.rs
apps/mobile/: App.tsx  metro.config.js  package.json  tailwind.config.js
apps/web/: package-lock.json  package.json
apps/web/app/: page.tsx
apps/web/app/listing/[id]/: page.tsx
