[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid"] }
dotenvy = "0.15"
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.5", features = ["cors"] }
uuid = { version = "1.10", features = ["serde", "v4"] }